base/builds/regulus/argocd/projects/hometheatre/manifests/nzbhydra2/Service-nzbhydra2.yaml
apiVersion: v1
kind: Service
metadata:
  name: nzbhydra2
  namespace: nzbhydra2
spec:
  ports:
  - name: http
    port: 5076
    protocol: TCP
    targetPort: 5076
  selector:
    app.kubernetes.io/instance: nzbhydra2
    app.kubernetes.io/name: nzbhydra2
  type: ClusterIP
