base/builds/regulus/argocd/projects/hometheatre/manifests/nzbhydra2/HTTPRoute-nzbhydra2.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nzbget
  namespace: nzbget
spec:
  hostnames:
  - nzbhydra2.apps.phalnet.com
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: cluster-ingress
    namespace: default
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: nzbhydra2
      port: 5076
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
